Fixed issue where background wasn't covering the entire page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,6 @@ https://mkrtchyan.ga
 }
 
 .stars, .twinkling, .clouds {
-  position:absolute;
   top:0;
   left:0;
   right:0;
